<resources>
    <string name="app_name">Desafio PicPay</string>

    <string name="main_title">Contatos</string>
    <string name="main_hint_search">A quem você deseja pagar?</string>

    <string name="label_retry">Tentar novamente</string>

    <string name="cover_credit_card_title">Cadastre um cartão de crédito</string>
    <string name="cover_credit_card_subtitle">Para fazer pagamentos para outras pessoas você precisa cadastrar um cartão
        de crédito pessoal.</string>
    <string name="cover_credit_card_register_card">Cadastrar cartão</string>

    <string name="credit_card_title">Cadastrar cartão</string>
    <string name="credit_card_number">Número do cartão</string>
    <string name="credit_card_name">Nome do titular</string>
    <string name="credit_card_expire">Vencimento</string>
    <string name="credit_card_cvv">CVV</string>
    <string name="credit_card_save">Salvar</string>
    <string name="credit_card_save_successfully">Cartão salvo com sucesso</string>
    <string name="credit_cards_label">Cartões de crédito</string>
    <string name="credit_card_brand_label">Mastercard</string>

    <string name="payment_pay">Pagar</string>
    <string name="payment_monetary_mask">R$</string>
    <string name="payment_default_value">0,00</string>
    <string name="payment_edit">Editar</string>
    <string name="payment_register_credit_card">Cadastrar cartão</string>
    <string name="payment_selected_credit_card">Mastercard %1$s •</string>

    <string name="receipt_label">Recibo</string>
    <string name="receipt_total">Total pago</string>
    <string name="receipt_credit_card">Cartão Master %1$s</string>
</resources>
