<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.creditCard.activity.CreditCardCoverActivity">

    <ImageView
            android:id="@+id/ivCoverCreditCardCard"
            android:layout_width="100dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/ic_credit_card"
            app:layout_constraintBottom_toTopOf="@id/tvCoverCreditCardTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/xlargeMargin"
    />

    <TextView
            android:id="@+id/tvCoverCreditCardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cover_credit_card_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            style="@style/MainTitle"
            android:layout_marginStart="@dimen/default_margin_title"
            android:layout_marginEnd="@dimen/default_margin_title"
    />

    <TextView
            android:id="@+id/tvCoverCreditCardSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cover_credit_card_subtitle"
            app:layout_constraintTop_toBottomOf="@id/tvCoverCreditCardTitle"
            android:layout_marginStart="@dimen/xxlargeMargin"
            android:layout_marginEnd="@dimen/xxlargeMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:textAlignment="center"
            style="@style/Subtitle"
            android:alpha="0.8"
    />

    <Button
            android:id="@+id/btCoverCreditCardRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/xdefaultMargin"
            android:text="@string/cover_credit_card_register_card"
            style="@style/ButtonDefault"
    />

</androidx.constraintlayout.widget.ConstraintLayout>