<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".features.payment.activity.PaymentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbPaymentToolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivPaymentAvatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/xxlargeMargin"
                android:src="@mipmap/ic_launcher"
        />

        <TextView
                android:id="@+id/tvPaymentUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ivPaymentAvatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/minimumMargin"
                style="@style/Subtitle"
                tools:text="zelda.williams"
        />

        <EditText
                android:id="@+id/tvPaymentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvPaymentUsername"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/xlargeMargin"
                android:inputType="numberDecimal"
                android:text="@string/payment_default_value"
                style="@style/ValuePayment"
        />

        <TextView
                android:id="@+id/tvPaymentMonetaryMask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvPaymentUsername"
                app:layout_constraintEnd_toStartOf="@id/tvPaymentValue"
                android:layout_marginEnd="@dimen/minimumMargin"
                android:layout_marginTop="@dimen/xxxlargeMargin"
                android:text="@string/payment_monetary_mask"
                style="@style/Monetary"
        />

        <Button
                android:id="@+id/btPaymentPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_pay"
                android:layout_margin="@dimen/xdefaultMargin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/ButtonDefault"
        />

        <ProgressBar
                android:id="@+id/pbPaymentApiLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>