<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.home.activity.MainActivity"
>

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <TextView
                        android:id="@+id/tvMainContacts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_title"
                        style="@style/MainTitle"
                        android:layout_margin="@dimen/default_margin_title"
                />

                <EditText
                        android:id="@+id/etMainSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        android:layout_marginStart="@dimen/defaultMargin"
                        android:layout_marginEnd="@dimen/defaultMargin"
                        android:hint="@string/main_hint_search"
                        style="@style/EditTextDefault"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

        <androidx.core.widget.NestedScrollView
                android:id="@+id/vgMainContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/defaultMargin"
                android:layout_marginEnd="@dimen/defaultMargin"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        >

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMainList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/etMainSearch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingTop="@dimen/largeMargin"
                    android:paddingBottom="@dimen/defaultMargin"
                    android:clipToPadding="false"
                    tools:itemCount="8"
                    tools:listitem="@layout/user_item"
            />

        </androidx.core.widget.NestedScrollView>

        <ProgressBar
                android:id="@+id/pbMainLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <RelativeLayout
                android:id="@+id/vgMainErrorLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

            <ImageView
                    android:id="@+id/ivMainIconError"
                    app:srcCompat="@drawable/ic_baseline_error_outline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/tvMainErrorMessage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/minimumMargin"/>

            <TextView
                    android:id="@+id/tvMainErrorMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/minimumMargin"
                    android:layout_marginStart="@dimen/defaultMargin"
                    android:layout_marginEnd="@dimen/defaultMargin"
                    android:textColor="@color/title_white"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    tools:text="Erro ao processar solicitacao"
            />

            <Button
                    android:id="@+id/btMainRetry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_retry"
                    android:layout_below="@id/tvMainErrorMessage"
                    android:layout_marginTop="@dimen/minimumMargin"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/xdefaultMargin"
                    style="@style/ButtonDefault"
            />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>